--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
     
+    <div class="choices">
+        <h3>Your choice:</h3>
+        <h3>Computer choice:</h3>
+        <h3></h3>
+    </div>
+
+    <div class="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    
+    <div class="results">
+        <p>Player Score: <span></span></p>
+        <p>Computer Score: <span></span></p>
+        <p>Final Score: <span></span></p>
+    </div>
+
 </body>
 </html>
