ROCK PAPER SCISSORS with DOM v2

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <h1>Game of Rock Paper Scissors</h1>
+    <h2>Best of 5 rounds</h2>
     
     <div class="choices">
-        <h3>Your choice:</h3>
-        <h3>Computer choice:</h3>
-        <h3></h3>
+        <p>Your choice: <span></span></p>
+        <p>Computer choice: <span></span></p>
     </div>
+
+    <p class="round-result">Round: <span></span></p>
 
     <div class="buttons">
         <button id="rock">Rock</button>
@@ -21,11 +24,13 @@
         <button id="scissors">Scissors</button>
     </div>
     
-    <div class="results">
+    <div class="scores">
         <p>Player Score: <span></span></p>
         <p>Computer Score: <span></span></p>
-        <p>Final Score: <span></span></p>
+        <!-- <p>Final Score: <span></span></p> -->
     </div>
+
+    <h2 id="winner"></h2>
 
 </body>
 </html>
