--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <h1>Game of Rock Paper Scissors</h1>
-    <h2>Best of 5 rounds</h2>
+    <h1>Rock Paper Scissors</h1>
+    <h2>Score 5 to win</h2>
     
     <div class="choices">
         <p>Your choice: <span></span></p>
